Folder Hierarchy modified

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <img src="cook.jpg" alt="Image of a cook">
 
         <ul>
-            <li><a href="file:///home/yubuntu/repos/odin-recipes/recipes/lasagna.html"><h4>Lasagna</h4></a></li>
-            <li><a href="file:///home/yubuntu/repos/odin-recipes/recipes/pezo_pizza.html"><h4>Pezo Pizza</h4></a></li>
-            <li><a href="file:///home/yubuntu/repos/odin-recipes/recipes/taco_meat.html"><h4>Taco Meat</h4></a></li>
+            <li><a href="./recipes/lasagna.html"><h4>Lasagna</h4></a></li>
+            <li><a href="./recipes/pezo_pizza.html"><h4>Pezo Pizza</h4></a></li>
+            <li><a href="./recipes/taco_meat.html"><h4>Taco Meat</h4></a></li>
         </ul>
     </body>
 </html>
