--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -40,5 +40,7 @@
             <li><strong>Bake until bubbly and you're ready to eat!</strong></li>
         </ol>
         </p>
+
+        <a href="../index.html">Back to main page</a>
     </body>
 </html>
