--- a/recipes/pezo_pizza.html
+++ b/recipes/pezo_pizza.html
@@ -35,5 +35,7 @@
             <li>Spread pesto on pizza crust. Top with tomatoes, bell peppers, olives, red onions, artichoke hearts and feta cheese.</li>
             <li>Bake for 8 to 10 minutes, or until cheese is melted and browned.</li>
         </ol>
+
+        <a href="../index.html">Back to main page</a>
     </body>
 </html>
